<resources>
    <string name="app_name">s165245 Magic Hangman</string>
    <string name="NewGame">New Game</string>
    <string name="GameName">Hangman</string>
    <string name="ViewScore">View Score</string>
    <string name="SubmitGuess">Guess</string>
    <string name="InitialGuess" />
    <string name="InitialGuessedWord" />
    <string name="GameInProgressStatus" />
    <string name="ScoreboardTitle">Scoreboard</string>
    <string name="YouLost">You lost, the card was: %1$s</string>
    <string name="WinInformation">You won!</string>
    <string name="Ok">OK</string>
    <string name="SelectRandomCard">Random Card</string>
    <string name="PickCard">Pick Card</string>
    <string name="CardName">Card Name</string>
    <string name="Search">Search</string>
    <string name="DefaultPostGameText">The game has ended!</string>
    <string name="Empty" />
    <string name="YouWon">Congratulations, you won!</string>
    <string name="NewHighscore">New highscore: %1$s</string>
    <string name="ResetScores">Reset Scores</string>
    <string name="ResetHighscoreConfirmTitle">Reset Highscores</string>
    <string name="ResetHighscoreConfirmBody">Are you sure?</string>
</resources>
